fixing extra spacer for file icon styles

--- a/wp-content/themes/reformer/sass/base/icons.scss
+++ b/wp-content/themes/reformer/sass/base/icons.scss
@@ -151,7 +151,7 @@
   color: $slate;
   font-family: $secondary-font;
 
-  &.document-extra-space {
+  &.document-left-space {
   	margin-left: 1.5em;
   }
 }
