--- a/wp-content/themes/reformer/style.css
+++ b/wp-content/themes/reformer/style.css
@@ -272,7 +272,7 @@ table {
   padding-left: 45px;
   color: #196d73;
   font-family: "Montserrat", Helvetica, sans-serif; }
-  .document-item.document-extra-space {
+  .document-item.document-left-space {
     margin-left: 1.5em; }
 
 .reformation-service-material .document-item {
